vendor/async-trait-0.1.50/tests/ui/missing-body.stderr
error: associated function in `impl` without body
  --> $DIR/missing-body.rs:12:5
   |
12 |     async fn f(&self);
   |     ^^^^^^^^^^^^^^^^^-
   |                      |
   |                      help: provide a definition for the function: `{ <body> }`
